syntax = "proto3";
package protocol;

import "core/Tron.proto";
import "core/Contract.proto";

option java_package = "org.tron.api"; //Specify the name of the package that generated the Java file
option java_outer_classname = "GrpcAPI"; //Specify the class name of the generated Java file

service Wallet {

  rpc GetBalance (Account) returns (Account) {

  };
  rpc CreateTransaction (TransferContract) returns (Transaction) {

  };

  rpc BroadcastTransaction (Transaction) returns (Return) {

  };

  rpc ListAccounts (EmptyMessage) returns (AccountList) {

  };

  rpc CreateAccount (AccountCreateContract) returns (Transaction) {

  };

  rpc VoteWitnessAccount (VoteWitnessContract) returns (Transaction) {

  };

  rpc CreateAssetIssue (AssetIssueContract) returns (Transaction) {

  };

  rpc ListWitnesses (EmptyMessage) returns (WitnessList) {

  };

  rpc CreateWitness (WitnessCreateContract) returns (Transaction) {

  };

  rpc ListNodes (EmptyMessage) returns (NodeList) {

  }
};

message Return {
  bool result = 1;
}

message AccountList {
  repeated Account accounts = 1;
}

message WitnessList {
  repeated Witness witnesses = 1;
}

// Gossip node list
message NodeList {
  repeated Node nodes = 1;
}

// Gossip node
message Node {
  Address address = 1;
}

// Gossip node address
message Address {
  bytes host = 1;
  int32 port = 2;
}

message EmptyMessage {
}
